--- a/src/mdx/index.mdx
+++ b/src/mdx/index.mdx
@@ -2,6 +2,7 @@
 =================
 ## 可视化工具
 * [**选取主题色**](/themecolor)
+* [**等效换算**](/efl)
 ## API
 * **reflect**:[/api/reflect](./api/reflect)<br></br>
       返回你发送的HTTP请求。
