--- a/src/mdx/index.mdx
+++ b/src/mdx/index.mdx
@@ -37,3 +37,6 @@
       根据API返回的JSON生成对应的TypeScript类型声明
       返回格式: json {ok:boolean,data:Object}<br></br>
       ex.1:[./api/json2type?url=https://utils-kotorik.vercel.app/api/callme?url=https://www.baidu.com](./api/json2type?url=https://utils-kotorik.vercel.app/api/callme?url=https://www.baidu.com)
+## 友情链接
+* [**5000兆円生成器 super**](http://yurafuca.com/5000choyen/index_cn.html)<br></br>
+[Github](https://github.com/yurafuca/5000choyen)
