feat(confuser): init

--- a/src/mdx/index.mdx
+++ b/src/mdx/index.mdx
@@ -3,6 +3,8 @@
 ## 可视化工具
 * [**选取主题色**](/themecolor)
 * [**等效换算**](/efl)
+* [**图片混淆**](/confuser)
+
 ## API
 * **reflect**:[/api/reflect](./api/reflect)<br></br>
       返回你发送的HTTP请求。
